wrote a description for the game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="container">
         <div class="page-header"><div class="text-center text-white h1">Welcome to Crystal Collector!!!</div></div>
             <div class ="jumbotron">
+                <div class="h6">The goal of this game is to click the gems, which will have random numbers assigned every new game, to match your score to the goal. Good luck!</div>
+                <hr>
                 <div class="row">
                     <span>wins: <span id="wins">0</span></span>
                 </div>
@@ -29,7 +31,7 @@
                         <div class="text-center">Your Score: <span id="score"></span></div>
                     </div>
                     <div class = "col-6">
-                        <div class="text-center">Score to achieve: <span id="tomeet"></span></div>
+                        <div class="text-center">Goal: <span id="tomeet"></span></div>
                     </div>
                 </div>
             </div>
